# thindx-xinput

./: .gitignore  Cargo.toml  Readme.md  errors.natvis  guid.natvis  xinput.natvis
doc/: _doc.rs  apis.md  assumptions.md  crates.md  design.md  environment.md  features.md  versions.md
examples/: xinput-exercise-all.rs
src/: _headers.rs  _lib.rs  error.rs  error_kind.rs  error_macros.rs  errors.rs  macros.rs
src/constants/: xuser.rs
src/dll/: imports.rs
src/enumerations/: battery_devtype.rs  devsubtype.rs  devtype.rs  vk.rs
src/flags/: buttons.rs  caps.rs
src/functions/: enable_.rs  get_audio_device_ids_.rs  get_battery_information_.rs  get_capabilities_.rs  get_dsound_audio_device_guids_.rs  get_keystroke_.rs  get_state_.rs  get_state_ex_.rs  power_off_controller_.rs  set_state_.rs  todo.rs
src/headers/guiddef.h/: guiddef.rs
src/headers/xinput.h/: xinput.rs
src/headers/xinput.h/dll/: imports.rs
src/headers/xinput.h/enumerations/: battery_devtype.rs  battery_level.rs  battery_type.rs  devsubtype.rs  user.rs
src/headers/xinput.h/flags/: buttons.rs  flag.rs  keystroke.rs
src/headers/xinput.h/functions/: enable_.rs  get_audio_device_ids_.rs  get_battery_information_.rs  get_capabilities_.rs  get_dsound_audio_device_guids_.rs  get_keystroke_.rs  get_state_.rs  get_state_ex_.rs  set_state_.rs  todo.rs
src/headers/xinput.h/structures/: audio_device_ids.rs  battery_information.rs  capabilities.rs  dsound_audio_device_guids.rs  gamepad.rs  keystroke.rs  state.rs  vibration.rs
src/interop/: _interop.rs  cpp.rs  winapi-0.2.rs  winapi-0.3.rs  windows-0.22.rs  windows-0.44.rs  windows-sys-0.27.rs  windows-sys-0.45.rs
src/namespaces/: _root.rs
src/structures/: audio_device_ids.rs  battery_information.rs  capabilities.rs  dsound_audio_device_guids.rs  gamepad.rs  keystroke.rs  state.rs  vibration.rs
tests/: fuzz-xinput.rs
thindx/: Cargo.toml  guid.natvis
thindx/src/: error.rs  error_macros.rs  errors.rs  macros.rs
thindx/src/headers/guiddef.h/: guiddef.rs
thindx/src/headers/xinput.h/functions/: get_state_ex_.rs
thindx/src/headers/xinput.h/structures/: capabilities.rs  gamepad.rs  state.rs
thindx/tests/: fuzz-xinput.rs
