# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name                                    = "thindx-xinput"
version                                 = "0.0.0-git"
authors                                 = ["MaulingMonkey <git@maulingmonkey.com>"]
edition                                 = "2021"
repository                              = "https://github.com/MaulingMonkey/thindx-xinput"
documentation                           = "https://docs.rs/thindx-xinput"
license                                 = "Apache-2.0 OR MIT"
readme                                  = "Readme.md"
description                             = "Thin XInput wrappers"
keywords                                = ["directx", "xinput", "gamepads"]
categories                              = ["api-bindings", "os::windows-apis"] # https://crates.io/category_slugs
rust-version                            = "1.71.0" # debugger_visualizer MSRV

[package.metadata.docs.rs]
default-target                          = "x86_64-pc-windows-msvc"
targets                                 = ["x86_64-pc-windows-msvc", "i686-pc-windows-msvc"]
all-features                            = true

[lib]
path                                    = "src/_lib.rs"
name                                    = "xinput"



[target.'cfg(windows)'.dependencies]
bytemuck.version                        = "1"
lazy_static                             = "1.4"
minidl                                  = "0.1.6"
#minidl.git                              = "https://github.com/MaulingMonkey/minidl"
#minidl.rev                              = "e1e86cb7a6e48a3ed1aff4a1e927311d90039e82"
winapi.version                          = "0.3.9"
winresult.version                       = "0.1.2"
#winresult.git                           = "https://github.com/MaulingMonkey/winresult"
#winresult.rev                           = "9b877bf59efd8cc89fae4fd5f791a0e51cc53712"
#winresult.path                          = "../../winresult/crates/winresult"

bytemuck.features                       = ["derive"]
winapi.features = [
    # shared
    "guiddef",
    "minwindef",
    "winerror",

    # um
    "processthreadsapi",
    "psapi",
    "winnt",
    "xinput",
]

[target.'cfg(windows)'.dev-dependencies]
mmrbi                                   = "0.0.20"
winapi.version                          = "0.3.9"

winapi.features = [
    # shared
    "windef",

    # um
    "combaseapi",
    "debugapi",
    "objbase",
    "winuser",
]
