# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name                                    = "thindx-xinput"
version                                 = "0.0.0-git"
authors                                 = ["MaulingMonkey <git@maulingmonkey.com>"]
edition                                 = "2021"
repository                              = "https://github.com/MaulingMonkey/thindx-xinput"
documentation                           = "https://docs.rs/thindx-xinput"
license                                 = "Apache-2.0 OR MIT"
readme                                  = "Readme.md"
description                             = "Thin XInput wrappers"
keywords                                = ["directx", "xinput", "gamepads"]
categories                              = ["api-bindings", "os::windows-apis"] # https://crates.io/category_slugs
rust-version                            = "1.71.0" # debugger_visualizer MSRV

[package.metadata.docs.rs]              # https://docs.rs/about/metadata
default-target                          = "x86_64-pc-windows-msvc"
targets                                 = ["x86_64-pc-windows-msvc", "i686-pc-windows-msvc"]
features                                = ["xxx-docs"]
rustdoc-args                            = ["--cfg", "doc_cfg"]

[features]
# default                               = []
undocumented                            = [] # allow the use of undocumented APIs

winapi-0-3                              = []
# winapi-0-2                            = [] # feature defined by optional dependency
# winapi-0-1                            = [] # XXX: doesn't compile on modern rustc? spams e.g.: error: type `HKEY__` is private

xxx-docs = [
    "undocumented",
    "winapi-0-3",
    "windows-sys-0-52",
]



[lib]
path                                    = "src/_lib.rs"
name                                    = "xinput"



[target.'cfg(windows)'.dependencies]
bytemuck.version                        = "1"
minidl                                  = "0.1.6"
#minidl.git                              = "https://github.com/MaulingMonkey/minidl"
#minidl.rev                              = "e1e86cb7a6e48a3ed1aff4a1e927311d90039e82"
winapi.version                          = "0.3.9"
winapi-0-2                              = { package = "winapi", version = "0.2", optional = true }
winresult.version                       = "0.1.2"
#winresult.git                           = "https://github.com/MaulingMonkey/winresult"
#winresult.rev                           = "9b877bf59efd8cc89fae4fd5f791a0e51cc53712"
#winresult.path                          = "../../winresult/crates/winresult"

bytemuck.features                       = ["derive"]
winapi.features = [
    # shared
    "guiddef",
    "minwindef",
    "winerror",

    # um
    "processthreadsapi",
    "psapi",
    "winnt",
    "xinput",
]

windows-0-52                            = { package = "windows", version = "0.52.0", optional = true, features = ["Win32_UI_Input_XboxController"] }
windows-0-51                            = { package = "windows", version = "0.51.0", optional = true, features = ["Win32_UI_Input_XboxController"] }
windows-0-48                            = { package = "windows", version = "0.48.0", optional = true, features = ["Win32_UI_Input_XboxController"] }
windows-0-46                            = { package = "windows", version = "0.46.0", optional = true, features = ["Win32_UI_Input_XboxController"] }
windows-0-44                            = { package = "windows", version = "0.44.0", optional = true, features = ["Win32_UI_Input_XboxController"] }
windows-0-43                            = { package = "windows", version = "0.43.0", optional = true, features = ["Win32_UI_Input_XboxController"] }
windows-0-42                            = { package = "windows", version = "0.42.0", optional = true, features = ["Win32_UI_Input_XboxController"] }
windows-0-41                            = { package = "windows", version = "0.41.0", optional = true, features = ["Win32_UI_Input_XboxController"] }
windows-0-40                            = { package = "windows", version = "0.40.0", optional = true, features = ["Win32_UI_Input_XboxController"] }
windows-0-39                            = { package = "windows", version = "0.39.0", optional = true, features = ["Win32_UI_Input_XboxController"] }
windows-0-38                            = { package = "windows", version = "0.38.0", optional = true, features = ["Win32_UI_Input_XboxController"] }
windows-0-37                            = { package = "windows", version = "0.37.0", optional = true, features = ["Win32_UI_Input_XboxController"] }
windows-0-36                            = { package = "windows", version = "0.36.0", optional = true, features = ["Win32_UI_Input_XboxController"] }
windows-0-35                            = { package = "windows", version = "0.35.0", optional = true, features = ["Win32_UI_Input_XboxController"] }
windows-0-34                            = { package = "windows", version = "0.34.0", optional = true, features = ["Win32_UI_Input_XboxController"] }
windows-0-33                            = { package = "windows", version = "0.33.0", optional = true, features = ["Win32_UI_Input_XboxController"] }
windows-0-32                            = { package = "windows", version = "0.32.0", optional = true, features = ["Win32_UI_Input_XboxController"] }
windows-0-30                            = { package = "windows", version = "0.30.0", optional = true, features = ["Win32_UI_Input_XboxController"] }
windows-0-29                            = { package = "windows", version = "0.29.0", optional = true, features = ["Win32_UI_Input_XboxController"] }
windows-0-28                            = { package = "windows", version = "0.28.0", optional = true, features = ["Win32_UI_Input_XboxController"] }
windows-0-27                            = { package = "windows", version = "0.27.0", optional = true, features = ["Win32_UI_Input_XboxController"] }
windows-0-26                            = { package = "windows", version = "0.26.0", optional = true, features = ["Win32_UI_Input_XboxController"] }
windows-0-25                            = { package = "windows", version = "0.25.0", optional = true, features = ["Win32_UI_Input_XboxController"] }
windows-0-24                            = { package = "windows", version = "0.24.0", optional = true, features = ["Win32_UI_Input_XboxController"] }
windows-0-23                            = { package = "windows", version = "0.23.0", optional = true, features = ["Win32_UI_XInput"] }
windows-0-22                            = { package = "windows", version = "0.22.0", optional = true, features = ["Win32_UI_XInput"] }
# windows-0-21 is codegen only?

windows-sys-0-52                        = { package = "windows-sys", version = "0.52.0", optional = true, features = ["Win32_UI_Input_XboxController"] }
windows-sys-0-48                        = { package = "windows-sys", version = "0.48.0", optional = true, features = ["Win32_UI_Input_XboxController"] }
windows-sys-0-45                        = { package = "windows-sys", version = "0.45.0", optional = true, features = ["Win32_UI_Input_XboxController"] }
windows-sys-0-42                        = { package = "windows-sys", version = "0.42.0", optional = true, features = ["Win32_UI_Input_XboxController"] }
windows-sys-0-36                        = { package = "windows-sys", version = "0.36.0", optional = true, features = ["Win32_UI_Input_XboxController"] }
windows-sys-0-35                        = { package = "windows-sys", version = "0.35.0", optional = true, features = ["Win32_UI_Input_XboxController"] }
windows-sys-0-34                        = { package = "windows-sys", version = "0.34.0", optional = true, features = ["Win32_UI_Input_XboxController"] }
windows-sys-0-33                        = { package = "windows-sys", version = "0.33.0", optional = true, features = ["Win32_UI_Input_XboxController"] }
windows-sys-0-32                        = { package = "windows-sys", version = "0.32.0", optional = true, features = ["Win32_UI_Input_XboxController"] }
windows-sys-0-30                        = { package = "windows-sys", version = "0.30.0", optional = true, features = ["Win32_UI_Input_XboxController"] }
windows-sys-0-29                        = { package = "windows-sys", version = "0.29.0", optional = true, features = ["Win32_UI_Input_XboxController"] }
windows-sys-0-28                        = { package = "windows-sys", version = "0.28.0", optional = true, features = ["Win32_UI_Input_XboxController"] }
windows-sys-0-27                        = { package = "windows-sys", version = "0.27.0", optional = true, features = ["Win32_UI_Input_XboxController"] }

[target.'cfg(windows)'.dev-dependencies]
mmrbi                                   = "0.0.20"
winapi.version                          = "0.3.9"

winapi.features = [
    # shared
    "windef",

    # um
    "combaseapi",
    "debugapi",
    "objbase",
    "winuser",
]
