# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name                                    = "thindx-xinput"
version                                 = "0.0.0-git"
authors                                 = ["MaulingMonkey <git@maulingmonkey.com>"]
edition                                 = "2021"
repository                              = "https://github.com/MaulingMonkey/thindx-xinput"
documentation                           = "https://docs.rs/thindx-xinput"
license                                 = "Apache-2.0 OR MIT"
readme                                  = "Readme.md"
description                             = "Thin XInput wrappers"
keywords                                = ["directx", "xinput", "gamepads"]
categories                              = ["api-bindings", "os::windows-apis"] # https://crates.io/category_slugs

include = [
    # "doc/changelog.md", # N/A
    "examples/*.rs",
    "src/**",
    "Readme.md",
    "LICENSE*",
    "*.natvis",
]

[package.metadata.docs.rs]
default-target                          = "x86_64-pc-windows-msvc"
targets                                 = ["x86_64-pc-windows-msvc", "i686-pc-windows-msvc"]
all-features                            = true

[lib]
path                                    = "src/_lib.rs"
name                                    = "xinput"



[target.'cfg(windows)'.dependencies]
abibool.version                         = "0.5"
abistr.version                          = "0.2.0-rc3" # const abistr::cstr!("...")
#abistr.git                              = "https://github.com/MaulingMonkey/abistr"
#abistr.rev                              = "1f4d6e40c7d430d586fe81eca46f9e64d569aaca"
bytemuck.version                        = "1"
lazy_static                             = "1.4"
minidl                                  = "0.1.6"
#minidl.git                              = "https://github.com/MaulingMonkey/minidl"
#minidl.rev                              = "e1e86cb7a6e48a3ed1aff4a1e927311d90039e82"
mcom                                    = "0.1.3"
winapi.version                          = "0.3.9"
winresult.version                       = "0.1.2"
#winresult.git                           = "https://github.com/MaulingMonkey/winresult"
#winresult.rev                           = "9b877bf59efd8cc89fae4fd5f791a0e51cc53712"
#winresult.path                          = "../../winresult/crates/winresult"

abibool.features                        = ["bytemuck"]
abistr.features                         = ["bytemuck"]
bytemuck.features                       = ["derive"]
winapi.features = [
    # shared
    "d3d9",
    "d3d9caps",
    "d3d9types",
    "d3dcompiler",
    "guiddef",
    "minwindef",
    "ntdef",
    "windef",
    "winerror",

    # um
    "audiosessiontypes",
    "errhandlingapi",
    "libloaderapi",
    "mmreg",
    "processthreadsapi",
    "psapi",
    "unknwnbase",
    "windef",
    "winnt",
    "winuser",
    "xinput",
]

[target.'cfg(windows)'.dev-dependencies]
bugsalot                                = "0.2"
mmrbi                                   = "0.0.19"
winapi.version                          = "0.3.9"

winapi.features = [
    # um
    "debugapi",
]
